// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MovieCardHead with header nav 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt="The Grand Budapest Hotel"
      src="img/the-grand-budapest-hotel-bg.jpg"
    />
  </div>,
  <h1
    className="visually-hidden"
  >
    WTW
  </h1>,
  <Header
    film={
      Object {
        "backgroundColor": "#ffffff",
        "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
        "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
        "director": "Wes Andreson",
        "genre": "Comedy",
        "id": 1,
        "isFavorite": false,
        "name": "The Grand Budapest Hotel",
        "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
        "previewImage": "img/the-grand-budapest-hotel.jpg",
        "previewVideoLink": "https://some-link",
        "rating": 8.9,
        "released": 2014,
        "runTime": 99,
        "scoresCount": 240,
        "starring": Array [
          "Bill Murray",
          "Edward Norton",
          "Jude Law",
          "Willem Dafoe",
          "Saoirse Ronan",
        ],
        "videoLink": "https://some-link",
      }
    }
    header={
      Object {
        "headClass": "movie-card__head",
        "nav": true,
      }
    }
  />,
]
`;

exports[`Render MovieCardHead without header nav 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt="The Grand Budapest Hotel"
      src="img/the-grand-budapest-hotel-bg.jpg"
    />
  </div>,
  <h1
    className="visually-hidden"
  >
    WTW
  </h1>,
  <Header
    film={
      Object {
        "backgroundColor": "#ffffff",
        "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
        "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
        "director": "Wes Andreson",
        "genre": "Comedy",
        "id": 1,
        "isFavorite": false,
        "name": "The Grand Budapest Hotel",
        "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
        "previewImage": "img/the-grand-budapest-hotel.jpg",
        "previewVideoLink": "https://some-link",
        "rating": 8.9,
        "released": 2014,
        "runTime": 99,
        "scoresCount": 240,
        "starring": Array [
          "Bill Murray",
          "Edward Norton",
          "Jude Law",
          "Willem Dafoe",
          "Saoirse Ronan",
        ],
        "videoLink": "https://some-link",
      }
    }
    header={
      Object {
        "headClass": "movie-card__head",
        "nav": false,
      }
    }
  />,
]
`;
